--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,22 +1,89 @@
 pipeline {
     agent any
-
     stages {
         stage('Build') {
             steps {
+                echo "Building the code using Xcode."
                 sh 'xcodebuild -scheme WeatherApp'
             }
         }
-        stage('Test') {
+        stage('Unit and Integration Tests') {
             steps {
+                echo "Running unit tests with XCTest and integration tests."
                 sh 'xcodebuild test -scheme WeatherApp'
             }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploy stage'
-                // Add deployment steps here
+            post {
+                success {
+                    emailext attachLog: true,
+                    subject: "Tests Completed Successfully",
+                    body: "Unit and Integration Tests are completed successfully.",
+                    to: "sakethreddy0014@gmail.com"
+                }
+                failure {
+                    emailext attachLog: true,
+                    subject: "Tests Failed",
+                    body: "Unit and Integration Tests got failed. Check the logs for details.",
+                    to: "sakethreddy0014@gmail.com"
+                }
             }
+        }
+        stage('Code Analysis') {
+            steps {
+                echo "Performing code analysis with SonarQube."
+                // Add SonarQube analysis steps here
+            }
+        }
+        stage('Security Scan') {
+            steps {
+                echo "Conducting security scan with OWASP ZAP."
+                // Add OWASP ZAP scan steps here
+            }
+            post {
+                success {
+                    emailext attachLog: true,
+                    subject: 'Security Scan Completed Successfully',
+                    body: 'Security Scan completed successfully.',
+                    to: 'sakethreddy0014@gmail.com'
+                }
+                failure {
+                    emailext attachLog: true,
+                    subject: 'Security Scan Failed',
+                    body: 'Security Scan failed. Check the logs for details.',
+                    to: 'sakethreddy0014@gmail.com'
+                }
+            }
+        }
+        stage('Deploy to Staging') {
+            steps {
+                echo "Deploying to staging server on AWS EC2 instance."
+                // Add deployment steps to staging here
+            }
+        }
+        stage('Integration Tests on Staging') {
+            steps {
+                echo "Executing integration tests in staging environment."
+                // Add integration tests on staging here
+            }
+        }
+        stage('Deploy to Production') {
+            steps {
+                echo "Deploying to production environment."
+                // Add deployment steps to production here
+            }
+        }
+    }
+    post {
+        success {
+            emailext attachLog: true,
+            subject: "Pipeline Successful",
+            body: "The Jenkins pipeline completed successfully.",
+            to: "sakethreddy0014@gmail.com"
+        }
+        failure {
+            emailext attachLog: true,
+            subject: "Pipeline Failed",
+            body: "The Jenkins pipeline failed. Check the logs for details.",
+            to: "sakethreddy0014@gmail.com"
         }
     }
 }
